2003-08-27  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/c-api/ecssplit.c: Modififed ecs_SplitURL() to release
	regular expression resources if called with a NULL url.

	* ogdi/c-api/client.c: Modified cln_DestroyClient() to call
	ecs_SplitURL(NULL) to free static resources.Well, go

	* ogdi/drivers/adrg/utils.c: Fixed problem in _read_adrg(), 
	_read_overview(), and _initRegionWithDefault() such that the files 
	were never closed.  As per bug 795612.

	* ogdi/drivers/adrg/adrg.c: Fixed _releaseAllLayers() so it release
	from the last layer to the first.  It seems that ecs_FreeLayer() 
	now decrements the s->nblayers but didn't use to at some point in the
	distant past.  This bug was discovered while investigating the leaks
	described in sourceforge bug 795612.

2003-05-22  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/driver/vrf/feature.c, utils.c: Fixed several problems related
	to bug 741854, primarily related to VITD area features causing hangs
	and crashes.  

2003-01-29  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/include/ecs_util.h: fixed spelling of length in a few places.

2002-12-18  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/include/ecs_util.h: If PI is undefined try to use M_PI.  If
	not available define with much more precision.  As per bug report
	from Craig Bruce.

=============================================================================

2002-03-28  Frank Warmerdam  <warmerdam@pobox.com>

	* OGDI 3.1.1 Release.

	* external/zlib/*: Upgraded to zlib 1.1.4 to avoid widely publicized
	security problem with zlib 1.1.3.

2002-02-21  Frank Warmerdam  <warmerdam@pobox.com>

	* configure.in: Don't include /usr/local/lib in LIBS path, and
	-I/usr/local/include in CFLAGS by default. 

	* contrib/mkbindist.sh: completed (also added README-BIN.TXT). 

	* contrib/ogdi_import/ogdi_import.c: fixed bug building with old
	(included with OGDI) PROJ.4 library.

	* ogdi/gltpd/{asyncsvr.c,ecs_svc.c}: Undefied svc_fdset if defined