@@ -1,3 +1,9 @@
+2003-12-15  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* vpflib/ coorgeom.c, vpfprim.c, vpftable.h, xvt.h:
+	Avoid use of obsolete values.h and malloc.h in order to compile
+	properly on MacOS 10.3.  Submitted by Greg Allen.
+
 2003-08-27  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* ogdi/c-api/ecssplit.c: Modififed ecs_SplitURL() to release
